# opengl-3d-cube

./: CMakeLists.txt  README.md  main.cpp
glad/: CMakeLists.txt
glad/include/KHR/: khrplatform.h
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: fragment.glsl  vertex.glsl
